# ChangeLog for dev-python/tweepy
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Apr 2012; James Rowe <jnrowe@gmail.com> tweepy-1.8.ebuild,
  tweepy-1.9.ebuild:
  Switched to python-distutils-ng eclass.

*tweepy-1.9 (20 Mar 2012)

  20 Mar 2012; James Rowe <jnrowe@gmail.com> +tweepy-1.9.ebuild:
  Version bump [578].

  19 Mar 2012; James Rowe <jnrowe@gmail.com> tweepy-1.8.ebuild:
  Switched to EAPI4.

  20 Jan 2012; James Rowe <jnrowe@gmail.com> -tweepy-1.7.1.ebuild,
  tweepy-1.8.ebuild:
  Keyworded x86.

  20 Jan 2012; James Rowe <jnrowe@gmail.com> tweepy-1.8.ebuild:
  Keyworded amd64.

*tweepy-1.8 (21 Dec 2011)

  21 Dec 2011; James Rowe <jnrowe@gmail.com> +tweepy-1.8.ebuild, metadata.xml:
  Version bump [509].

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  05 Jul 2010; James Rowe <jnrowe@gmail.com> -tweepy-1.6.ebuild,
  tweepy-1.7.1.ebuild:
  Keyworded x86.

  05 Jul 2010; James Rowe <jnrowe@gmail.com> tweepy-1.7.1.ebuild:
  Keyworded amd64.

*tweepy-1.7.1 (02 Jun 2010)

  02 Jun 2010; James Rowe <jnrowe@gmail.com> +tweepy-1.7.1.ebuild:
  Version bump [62c].

  25 Apr 2010; James Rowe <jnrowe@gmail.com> tweepy-1.6.ebuild:
  Keyworded x86.

  23 Apr 2010; James Rowe <jnrowe@gmail.com> tweepy-1.6.ebuild:
  Keyworded amd64.

  25 Mar 2010; James Rowe <jnrowe@gmail.com> tweepy-1.6.ebuild:
  Added a note about oauth dependency.

  25 Mar 2010; James Rowe <jnrowe@gmail.com> tweepy-1.6.ebuild:
  Keyworded ~x86.

*tweepy-1.6 (24 Mar 2010)

  24 Mar 2010; James Rowe <jnrowe@gmail.com> +tweepy-1.6.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
